--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -118,5 +118,19 @@
   
   .createAccount small {
     color: #999;
-    font-weight: lighter;
+   font-weight: lighter;
+  } 
+
+  .robert {
+    color: #b00d15;
+  }
+  
+  .letra {
+    color: #111;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+
+ .azul {
+    color:#3f51b5;
   }
