--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,15 +1,122 @@
-.footer{
-    padding: 40px 0px;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-.content {
+.footer-main-div {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    background: #dc3545;
+    padding: 10px 0px;
+}
+
+.footer-social-icons {
+    width: 100%;
+    height: auto;
+    margin: auto;
+}
+
+.footer-social-icons {
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+.footer-social-icons {
+    display: inline;
+    width: 50px;
+    height: 50px;
+    margin: 10px 0px;
+    border-radius: 100%;
+    background: #dc3545;
+}
+.footer-social-icons ul li a {
+    color: white;
+    font-size: 25px;
+    display: block;
+    list-style: none;
+}
+
+.footer-social-icons ul li a {
+    line-height: 46px;
     
 }
-.cps {
-    text-align: center;
-    background-color: gray;
+
+.footer-menu-one {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 1px;
 }
 
-.cps a {
+.footer-menu-one ul {
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+.footer-menu-one ul li {
+    display: inline;
+    margin: 0px 20px;
+}
+
+.footer-menu-one ul li a {
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
     color: black;
+    text-transform: uppercase;
+}
+
+.footer-menu-two {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 0px;
+}
+
+.footer-menu-two ul {
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+.footer-menu-two ul li {
+    display: inline     ;
+    margin: 0px 15px;
+}
+
+.footer-menu-two ul li a {
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+    text-transform: uppercase;
+}
+
+.footer-bottom {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    background: #323232;
+    padding: 10px;
+}
+
+.footer-bottom p {
+    font-family: sans-serif;
+    font-size: 14px;
+    text-align: center;
+    color: #ffffff;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.footer-bottom p a{ 
+    color: #fff;
+}
+
+.footer-bottom p a:hover { 
+    color:#dc3545;
 }
