--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -127,7 +127,7 @@
   
   .letra {
     color: #111;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    font-family: -apple-system#3f51b5, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   }
 
