--- a/src/pages/AboutCps/index.css
+++ b/src/pages/AboutCps/index.css
@@ -1,3 +1,13 @@
 .content{
     margin-top: 56px;
 }
+
+.graf{
+    margin-top: 10%;
+}
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
