Correção do formulário

--- a/src/components/FormLand/FormLand.css
+++ b/src/components/FormLand/FormLand.css
@@ -41,4 +41,15 @@
     border-radius: 3px;
     
 }
-  
+
+
+#test-form label {
+  font-size: 16px;
+}
+
+#test-form button {
+  background-color: #cc0c00;
+  width: 275%;
+  margin-left: 0px;
+  margin-right: 0px;
+}
