--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   height: 100%;
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr auto;
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
