--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,13 +1,10 @@
 .content {
     flex: 1;
 }
+
 .footer{
     flex-shrink: 0;
-}
-
-.jumbotron{
-    background-image: url("../../data/images/backgroundLand.png");
-    background-size: cover;
+    text-align: right;
 }
 
 .jumb{
@@ -17,3 +14,14 @@
 .cont{
     margin-top: -60px;
 }
+
+.carou{
+    width: 100%;
+}
+body, html {
+    background-image: url("../../data/images/prototipo2-02.png") ;      
+    background-repeat: no-repeat;
+    width:100%;
+    height:100%
+
+}  
