--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -25,3 +25,12 @@ body, html {
     height:100%
 
 }  
+
+.txt1{
+    color: white;
+    font-family: helvetica;
+    padding-left: 3em;
+}
+.txt3{
+    color: red;
+}
