--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light fixed-top">
   <img id="logo" class="navbar-brand mb-0" [src]="logo">
   <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
 </nav>
