--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -16,16 +16,17 @@
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite o Email ">
+            <input type="email" class="form-control" [(ngModel)]="usrn"  name="username" aria-describedby="emailHelp" placeholder="Digite o Email ">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite a senha desejada">
+            <input type="password" class="form-control" [(ngModel)]="pswd"  name="password" placeholder="Digite a senha desejada">
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button class="btn btn-primary" (click)="doPOST()">Enviar</button>
           
           <button type="button btn-btn 3" mdbBtn class="btn-fb bg-light" mdbWavesEffect><i class="fab fa-facebook-f"></i></button>
-          
+
+          <button class="btn btn-primary" (click)="lgGoogle()">Google</button>
         </form>
       </div>
       <div class="modal-footer">
