Alterações no Footer, Logo e Login

--- a/src/app/data-binding/data-binding.component.css
+++ b/src/app/data-binding/data-binding.component.css
@@ -1,5 +1,9 @@
 #logo {
     width: 100%;
-    max-width: 120px;   
+    max-width: 200px;   
     height: auto;
+}
+
+.fab fa-facebook-f {
+    color: blue;
 }
