--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light fixed-top">
+<nav class="navbar navbar-light bg-light">
   <img id="logo" class="navbar-brand mb-0" [src]="logo">
   <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
 </nav>
@@ -23,6 +23,9 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite a senha desejada">
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
+          
+          <button type="button btn-btn 3" mdbBtn class="btn-fb bg-light" mdbWavesEffect><i class="fab fa-facebook-f"></i></button>
+          
         </form>
       </div>
       <div class="modal-footer">
