Alterações no Background e Design do Login

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -15,7 +15,13 @@
     </a>
   </div>
   <div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
-      <h1 id="capt">Captando INOVAÇÃO,</h1>
-      <h1 id="propg" style="display: inline">propagando para os</h1><h1 id="anten" style="color: red; display: inline">antenados</h1>   
+      <br />
+      
+      <h1 style="color: white; display: inline" id="capt">Captando INOVAÇÃO,</h1>
+      <br />
+      <h1 style="color: white; display: inline" id="propg" >propagando para os</h1><h1 id="anten" style="color: red; display: inline">antenados</h1> 
+      <br />
+      <br />
+       
   </div> 
 </div>
