Pagina de Perfil

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -4,11 +4,31 @@
 }
 
 #profile{
-    margin-top: -110px;
+    margin-top: -140px;
 }
 
 #profile-pic {
     border-radius: 50%;
-    max-width: 500px;
-    max-height: 500px;
+    width: 320px;
+    height: 320px;
+}
+#icons{
+    margin-left: -100px;
+}
+#icon {
+    height: 100px;
+    width: 100px;
+}
+#icons-social{
+    margin-left: -30px; 
+}
+
+#name{
+
+    font-weight: bold;
+}
+
+#portfolio{
+    margin-top: 100px;
+    margin-left: -60px;
 }
