--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,14 +8,31 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-4">
-
+    <div class="col-md-4">
+      <div class="row" id="icons">
+        <div class="col-sm-3" id="icon"><a href=""><img [src]="test" alt=""></a></div>
+        <div class="col-sm-3" id="icon"><a href=""><img [src]="calendar" alt=""></a></div>
+        <div class="col-sm-3" id="icon"><a href=""><img [src]="friends" alt=""></a></div>
+        <div class="col-sm-3" id="icon"><a href=""><img [src]="shield" alt=""></a></div>
+      </div>
     </div>
-    <div class="col-4" id="profile">
+    <div class="col-md-4" id="profile">
         <img id="profile-pic" [src]="profile" alt="">
     </div>
-    <div class="col-4">
-
+    <div class="col-md-4">
+      <div class="row" id="name"><h1>Edu Francisco Simao</h1></div>
+      <div class="row" style="margin-top: -5px;">Fatec da Praia Grande</div>
+      <div class="row" style="margin-top: -5px;">22 anos</div>
+      <div class="row" style="margin-top: -5px;">Estudante</div>
+      <div class="row" style="margin-top: 5px;">
+        <div class="col-sm-3" id="icons-social"><a href=""><img [src]="fb" alt=""></a></div>  
+        <div class="col-sm-3" id="icons-social"><a href=""><img [src]="tw" alt=""></a></div>
+        <div class="col-sm-3" id="icons-social"><a href=""><img [src]="li" alt=""></a></div>
+        <div class="col-sm-3" id="icons-social"><a href=""><img [src]="yt" alt=""></a></div>
+      </div>
     </div>
+  </div>
+  <div class="row" id="portfolio">
+    <h1>Meu Portfólio</h1>
   </div>
 </div>
