--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -32,3 +32,21 @@
     margin-top: 100px;
     margin-left: -60px;
 }
+.blog .carousel-indicators {
+	left: 0;
+	top: auto;
+    bottom: -40px;
+
+}
+
+/* The colour of the indicators */
+.blog .carousel-indicators li {
+    background: #a3a3a3;
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+}
+
+.blog .carousel-indicators .active {
+background: #707070;
+}
