--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -10,7 +10,8 @@ h1 {
     padding: 5px 5px 0 0;
 }
 #background{
-    margin-left: -1rem,
+    margin-left: -1rem;
+    background-size: cover;
 }
 
 #capt{
