--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -5,14 +5,15 @@
     color: white;   
  }   
 
-input[type=text], select {
-    width: 100%;
+.confform{
+    
     padding: 5px 10px;
     margin: 10px 0px;
-    display: inline-block;
     border: 1px solid black;
     border-radius: 1px;
     box-sizing: border-box;
+    width: 30%;
+    right: 25%;
   }
   
   input[type=submit] {
@@ -34,6 +35,7 @@ input[type=text], select {
     border-radius: 5px;
     background-color: white;
     padding: 20px;
+    
   }
 
   #fbcolor{
@@ -58,3 +60,7 @@ input[type=text], select {
 
  }
   
+#btt {
+  background-color: red;
+}
+ 
