--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-light bg-light">
 <img id="logo" class="navbar-brand mb-0" [src]="logo">
+<button class="btn btn-danger my-2 my-sm-0" id="btt" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
 </nav>
 <div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
-  <div>
-    
+  
+<div>
     <h4>
     <strong>
             Cadastre-se e seja um antenado! 
@@ -15,16 +16,19 @@
       
        
       <label for="fname"></label>
-      <input type="text" id="fname" name="fname" placeholder="Nome Completo">
-  
+      <input type="text" id="fname" class="confform" name="fname" placeholder="Nome Completo">
+      <br />
+      <label for="sname"></label>
+      <input type="text" id="sname" class="confform" name="fname" placeholder="Sobrenome">
+      <br />
       <label for="email"></label>
-      <input type="text" id="email" name="email" placeholder="E-mail">
-
+      <input type="text" id="email" class="confform" name="email" placeholder="E-mail">
+      <br />
       <label for="password"></label>
-      <input type="text" id="pssword" name="pssword" placeholder="Senha">
-
+      <input type="password" id="pssword" class="confform" name="pssword" placeholder="Senha">
+      <br />
       <label for="confpass"></label>
-      <input type="text" id="confp" name="confp" placeholder="Confirmar Senha">
+      <input type="password" id="confp" class="confform" name="confp" placeholder="Confirmar Senha">
       <br />
       <br />
       
