--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -22,7 +22,7 @@
     <div class="col-md-4">
       <div class="row" id="name"><h1>{{ aluno.nome }} {{ aluno.sobrenome }}</h1></div>
       <div class="row" style="margin-top: -5px;">{{ aluno.escola }}</div>
-      <div class="row" style="margin-top: -5px;">22 anos</div>
+      <div *ngIf="aluno.idade != ''" class="row" style="margin-top: -5px;">{{ aluno.idade }} anos</div>
       <div class="row" style="margin-top: -5px;">Estudante</div>
       <div class="row" style="margin-top: 5px;">
         <div *ngIf="aluno.facebook != null" class="col-sm-3" id="icons-social"><a href="http://{{ aluno.facebook }}" target="_blank"><img [src]="fb" alt=""></a></div>  
