Atualizações na pagina de projetos

--- a/src/app/projeto/projeto.component.html
+++ b/src/app/projeto/projeto.component.html
@@ -4,7 +4,7 @@
   <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4"></h1>
-          <p class="lead"> CAPA</p>
+          <p class="lead"> BACKGROUND</p>
         </div>
       </div>
 
@@ -61,11 +61,20 @@
               Categorias
           </strong>
       </h4>
-      <p>   
-          meio-ambiente, gestão, robótica, educação,
-          <br /> 
-          tecnologia, infraestrutura, saúde
-      </p>
+    
+      <div>
+        <form>  
+        <input type="checkbox" name="option1" value="dgn">  design<br>
+        <input type="checkbox" name="option2" value="amb">  meio-ambiente<br>
+        <input type="checkbox" name="option3" value="ges">  gestão<br>
+        <input type="checkbox" name="option4" value="rob">  robótica<br>
+        <input type="checkbox" name="option5" value="edu">  educação<br>
+        <input type="checkbox" name="option6" value="tec">  tecnologia<br>
+        <input type="checkbox" name="option7" value="inf">  infraestrutura<br>
+        <input type="checkbox" name="option8" value="sau">  saúde<br>
+      </form>
+    </div>
+
       <div class="col-sm-3"><a href=""><img [src]="escudo" id="icon" alt=""></a></div> <p> <strong>Ganhou prêmios?</strong> </p>
       <label for="premium"></label>
           <input type="text" id="premium" name="premium"> 
