--- a/src/app/projeto/projeto.component.css
+++ b/src/app/projeto/projeto.component.css
@@ -22,7 +22,7 @@
   }
 
   #describe {
-    height: 30%;
+    height: 10%;
     width: 87%;
   }
 
@@ -58,3 +58,54 @@
 #premium {
   width: 87%;
 }
+
+#adfile {
+  margin-top: -30%;
+  margin-left: -220%;
+  width:80%;
+  
+}
+
+#imag{
+  margin-top: -30%;
+  margin-left: -145%;
+  width:80%;
+
+}
+
+#upload{
+  margin-top: -30%;
+  margin-left: -70%;
+  width:80%;
+}
+
+#plus {
+  margin-left: -27%;
+  margin-top: -11%;
+  width: 11%;
+}
+
+.col-md-4 {
+  display: inline-block;
+
+  width: 25%;
+  
+  
+}
+
+#escudo {
+  margin-left: -18%;
+  width: 14%;
+  margin-bottom: -40%;
+}
+
+.alturas {
+  margin-top: -30%;
+}
+
+#friends {
+  margin-top: -210%;
+  margin-left: -555%;
+  width:80%;
+}
+
