Acabamento da pagina de projetos

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <img id="logo" class="navbar-brand mb-0" [src]="logo">
-  <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
+  <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin"></button>
 </nav>
 
 <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
@@ -14,7 +14,6 @@
       </div>
       <div class="modal-body">
         <div>
-          <p>Se você for Aluno(a), Parceiro (a) ou Gestor, faça login.</p>
         </div>
         <form>
           <div>
