Ajustes na navbar

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
-<div class="container-fluid" [ngStyle]="{ 'background-image': 'url(' + background + ')'}" style="background-size: cover;">>
-<div class="row"></div>
+<div style="margin-top: 50px">
+<div id="" class="container-fluid" [ngStyle]="{ 'background-image': 'url(' + background + ')'}" style="background-size: cover;">
+<div class="row" id="row-padding"></div>
 <div class="row">
   <div class="col-md-1"></div>
   <div class="col-md-10">
@@ -28,4 +29,5 @@
   <div class="col-md-1"></div>
 </div>
 <div class="row" id="row-padding"></div>
+</div>
 </div>
