Front Agenda Part.1 Aluno

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-light bg-light">
-  <img id="logo" class="navbar-brand mb-0" [src]="logo"></nav>
+<app-navbar></app-navbar>
 
 <div class="letras">
   <h4>
@@ -50,4 +49,5 @@
     </div>
   </div>
 </div>
+
 
