--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-light bg-light">
-<img id="logo" class="navbar-brand mb-0" [src]="logo">
+<app-navbar></app-navbar>
 <button class="btn btn-danger my-2 my-sm-0" id="btt" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
-</nav>
+
 <div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
   
 <div>
