--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,8 +1,5 @@
-<nav class="navbar navbar-dark fixed-top" style="background-color: red;"> 
-  <a class="navbar-brand" href="#">
-    <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
-  </a>
-</nav>
+<app-navbar></app-navbar>
+
 <div class="">
   <img id="bg-profile" [src]="bg" class="img-fluid" alt="Responsive image">
 </div>
@@ -39,7 +36,6 @@
             <div class="row blog">
                 <div class="col-md-12">
                     <div id="blogCarousel" class="carousel slide" data-ride="carousel">
-
                         <ol class="carousel-indicators">
                             <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#blogCarousel" data-slide-to="1"></li>
@@ -98,17 +94,13 @@
                                         </a>
                                     </div>
                                 </div>
-                                <!--.row-->
                             </div>
-                            <!--.item-->
-
                         </div>
-                        <!--.carousel-inner-->
                     </div>
-                    <!--.Carousel-->
-
                 </div>
             </div>
 </div>
     </div>
   </div>
+
+
