--- a/src/app/projeto/projeto.component.html
+++ b/src/app/projeto/projeto.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-light bg-light">
-    <img id="logo" class="navbar-brand mb-0" [src]="logo"></nav>
+<app-navbar></app-navbar>
 
 <div><a href=""><img [src]="back" id="graf" alt=""></a></div>
 
